--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.9",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-use-measure": "^2.1.7",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
