--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/components/SearchBar",
+    "components/SearchBar",
     "data/slugify.js",
     "test.js"
   ],
